--- a/my-schedule/package.json
+++ b/my-schedule/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.89.1"
+    "sass": "^1.89.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
