--- a/my-schedule/package.json
+++ b/my-schedule/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "formik": "^2.4.6",
     "next": "15.3.0",
+    "next-intl": "^4.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.89.1",
